# physics-demo

./: .gitignore  .gitmodules  pom.xml
freetype2/: CMakeLists.txt  pom.xml
freetype2/jni/: freetype_jni.cpp
freetype2/src/main/java/me/furkandgn/freetype2/: Bitmap.java  CharMap.java  Face.java  FreeType.java  FreeTypeConstants.java  GlyphMetrics.java  GlyphSlot.java  Kerning.java  Library.java  LibraryVersion.java  Size.java  SizeMetrics.java  SizeRequest.java  Utils.java
natives/: libfreetype-jni.dylib
opengl/: pom.xml
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/: Constants.java  DefaultAppListener.java  OpenGLApp.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/camera/: Camera.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/component/: Component.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/font/: FontTest.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/listener/: AppListener.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/render/: RenderBatch.java  RenderBatchManager.java  RenderContext.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/scene/: SimulationScene.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/shader/: Shader.java
opengl/src/main/java/me/furkandgn/physicsdemo/opengl/util/: ArrayUtil.java  BufferUtils.java  OpenGlOptions.java  OpenGlUtil.java  PointUtil.java  RenderUtil.java
opengl/src/main/resources/: vertex.glsl
physics-common/: pom.xml
physics-common/src/main/java/me/furkandgn/physicsdemo/common/: Body.java  CollisionDetector.java  CollisionEvent.java  CollisionManager.java  CollisionSolver.java  ColoredBody.java  PhysicEngine.java  Point.java
(+95 files in other folders)
